--- a/agents-docs/content/docs/talk-to-your-agents/react/embedded-chat.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/embedded-chat.mdx
@@ -14,28 +14,64 @@ The InkeepEmbeddedChat component provides a fully embedded chat interface that y
   <Tab title="pnpm">```bash pnpm add @inkeep/cxkit-react-oss ```</Tab>
 </Tabs>
 
-## Basic Implementation
+## Quick Start
 
-Here's a simple implementation of the InkeepEmbeddedChat component:
+<Tabs>
+  <Tab title="Production">
+    
+    Use an API key for secure authentication in production:
+    
+    ```tsx
+    import {
+      InkeepEmbeddedChat,
+      type InkeepEmbeddedChatProps,
+    } from "@inkeep/cxkit-react-oss";
 
-```tsx
-import {
-  InkeepEmbeddedChat,
-  type InkeepEmbeddedChatProps,
-} from "@inkeep/cxkit-react-oss";
+    export default function App() {
+      const embeddedChatProps: InkeepEmbeddedChatProps = {
+        aiChatSettings: {
+          graphUrl: "https://your-api.example.com/api/chat",
+          apiKey: process.env.REACT_APP_INKEEP_API_KEY, // Your API key
+        },
+      };
 
-export default function App() {
-  const embeddedChatProps: InkeepEmbeddedChatProps = {
-    aiChatSettings: {
-      graphUrl: "http://localhost:3003/api/chat",
-      headers: {
-        "x-inkeep-tenant-id": "your-tenant-id",
-        "x-inkeep-project-id": "your-project-id",
-        "x-inkeep-graph-id": "your-graph-id",
-      },
-    },
-  };
+      return <InkeepEmbeddedChat {...embeddedChatProps} />;
+    }
+    ```
+    
+    **To get an API key:**
+    1. Open the Visual Builder Dashboard
+    2. Navigate to your Project → **API Keys**
+    3. Click **Create New Key** and select your agent graph
+    4. Copy the key (shown once) and store it in your environment variables
+  </Tab>
+  
+  <Tab title="Development">
+    
+    For local development, use headers with your graph IDs:
+    
+    ```tsx
+    import {
+      InkeepEmbeddedChat,
+      type InkeepEmbeddedChatProps,
+    } from "@inkeep/cxkit-react-oss";
 
-  return <InkeepEmbeddedChat {...embeddedChatProps} />;
-}
-```
+    export default function App() {
+      const embeddedChatProps: InkeepEmbeddedChatProps = {
+        aiChatSettings: {
+          graphUrl: "http://localhost:3003/api/chat",
+          headers: {
+            "x-inkeep-tenant-id": "your-tenant-id",
+            "x-inkeep-project-id": "your-project-id",
+            "x-inkeep-graph-id": "your-graph-id",
+          },
+        },
+      };
+
+      return <InkeepEmbeddedChat {...embeddedChatProps} />;
+    }
+    ```
+    
+    **Note:** Run your API server with `ENVIRONMENT=development` to bypass authentication.
+  </Tab>
+</Tabs>
