--- a/agents-docs/content/docs/quick-start.mdx
+++ b/agents-docs/content/docs/quick-start.mdx
@@ -8,11 +8,29 @@ icon: "LuRocket"
 
 If you don't have pnpm yet, use Corepack:
 
-```bash
-npm install -g corepack@latest
-corepack enable pnpm
-corepack use pnpm@latest-10
-```
+<Tabs>
+  <Tab title="macOS">
+    ```bash
+    npm install -g corepack@latest
+    corepack enable pnpm
+    corepack use pnpm@latest-10
+    ```
+  </Tab>
+  <Tab title="Linux">
+    ```bash
+    npm install -g corepack@latest
+    corepack enable pnpm
+    corepack use pnpm@latest-10
+    ```
+  </Tab>
+  <Tab title="Windows">
+    ```powershell
+    npm install -g corepack@latest
+    corepack enable pnpm
+    corepack use pnpm@latest-10
+    ```
+  </Tab>
+</Tabs>
 
 ### Step 1: Create a new agents project
 
