--- a/agents-docs/_snippets/auth/RunApiAuthModes.mdx
+++ b/agents-docs/_snippets/auth/RunApiAuthModes.mdx
@@ -3,9 +3,7 @@
 Choose the authentication method based on your environment:
 
 <Tabs>
-<Tab title="Development">
-
-### No Authentication
+<Tab title="Development (No Auth)">
 
 When running the API server locally with `pnpm dev`, authentication is automatically bypassed. You can use headers in the request instead:
 
@@ -22,9 +20,7 @@ This mode is for development only. Never use in production as it bypasses all se
 
 </Tab>
 
-<Tab title="Production">
-
-### API Key Authentication
+<Tab title="Production (API Key)">
 
 For production, use a graph-scoped API key for secure authentication.
 
