--- a/agents-docs/content/docs/community/contributing/project-constraints.mdx
+++ b/agents-docs/content/docs/community/contributing/project-constraints.mdx
@@ -1,5 +1,6 @@
 ---
-title: Project Constraints and Validation
+title: Data Layer constraints on Project relationships
+sidebarTitle: Project Data Layer
 description: How the Inkeep Agent Framework ensures data integrity with project constraints
 icon: "LuTriangleAlert"
 ---
