--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -14,7 +14,7 @@ Inkeep Agents are often used as:
 
 Agents are flexible and customizable - they can take on the role you need them to. All powered by the same knowledge of your product and company.
 
-To get started, you can try the **open-source** edition (this docs site) or to learn about Inkeep Cloud, see [here](/oss-enterprise-comparison).
+To get started, you can try the **open-source** edition (this docs site) or to learn about Inkeep Cloud, see [here](https://inkeep.com/get-started).
 
 ## Two ways to build your agents
 
