--- a/agents-docs/content/docs/talk-to-your-agents/overview.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/overview.mdx
@@ -3,8 +3,4 @@ title: Overview
 description: Learn how to talk to your agents
 icon: "LuMessageSquare"
 ---
-
-There are two ways to leverage the multi-agent systems you create with Inkeep:
-
-1. Communicating with them through as an [MCP server](/talk-to-your-agents/mcp-server)
-2. Communicating with them through our [React UI components library](/talk-to-your-agents/react/chat-button)
+<Snippet file="multi-agent-framework/WaysToTalkToGraph.mdx" />
