--- a/agents-docs/content/docs/concepts.mdx
+++ b/agents-docs/content/docs/concepts.mdx
@@ -70,7 +70,7 @@ Agents have a few ways of getting information:
 - **Headers**: In the API request to an Agent, the calling application can include headers (aka **Request Context**) for an agent.
 - **Context Fetchers**: Can be configured at the Graph level to always fetch information. For example, your Headers may include a `user-id`, which can then be used to fetch information about that user from a CRM. These happen without the need for Tool Calls.
 
-Headers and fetched context can then be referenced explicitly as `{{variables}}` in Agent prompts.
+Headers and fetched context can then be referenced explicitly as `{{variables}}` in Agent prompts. Learn more [here](/typescript-sdk/request-context).
 
 ## Ways to build
 
