--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -4,17 +4,16 @@ sidebarTitle: Overview
 icon: "LuBookOpen"
 ---
 
-With Inkeep, you can create and manage Agents with the **No-Code Visual Builder** or **TypeScript Agents SDK**.
+With Inkeep, you can create and manage Agents with a **No-Code Visual Builder** or a **TypeScript Developer SDK**. With the **2-way sync**, both technical and non-technical teams can create and edit Agents collaboratively in either format.
 
-Inkeep Agents are often used as:
-
-- A **Customer-facing Agent** that you embed as a support assistant in your help center, copilot in your app, or sales chatbot on your marketing site.
-- An **Internal Agent** accessible from Claude, ChatGPT, Slack, Zendesk, Cursor, and other apps your team uses
+Inkeep Agents can get work done as:
+- A **Customer-facing Agent** that you embed as an support assistant in your help center, copilot in your app, or chatbot on your marketing site.
+- An **Internal Agent** accessible from Slack, Zendesk, Claude, ChatGPT, Cursor, and other apps your team uses.
 - A **Workflow Agent** used to automate repetitive tasks at scale, like updating docs, creating blog posts, summarizing sales calls, and more.
 
-Agents are flexible and customizable - they can take on the role you need them to. All powered by the same knowledge of your product and company.
+Agents are flexible and customizable - they can take on the role you need them to. All powered by the same knowledge of your product and company, and with access to tools that integrate with your systems so they can take action.
 
-To get started, you can try the **open-source** edition (this docs site) or to learn about Inkeep Cloud, see [here](https://inkeep.com/get-started).
+To get started, you can try the **open-source** edition (this docs site), or to learn about Inkeep Cloud and Managed Agents for Customer Experience, see [here](https://inkeep.com/get-started).
 
 ## Two ways to build your agents
 
@@ -61,3 +60,4 @@ The **Visual Builder and Agents SDK are fully interoperable**: your technical an
     Learn about the key concepts of building Agents with Inkeep.
   </Card>
 </Cards>
+
