--- a/agents-docs/content/docs/talk-to-your-agents/api.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/api.mdx
@@ -34,8 +34,7 @@ This guide shows how to call your agent graph directly over HTTP and stream resp
       "content": "Hello!"
     }
   ],
-  "conversationId": "optional-conversation-id",
-  "requestContext": { "any": "validated per your graph config" }
+  "conversationId": "optional-conversation-id"
 }
 ```
 
@@ -44,7 +43,10 @@ This guide shows how to call your agent graph directly over HTTP and stream resp
 - **`messages`** — Must include at least one `user` message
 - **`content`** — Can be a string or an object with `parts` for multi-part content
 - **`conversationId`** — Optional; server generates one if omitted
-- **`requestContext`** — Optional; validated against your graph's context configuration if present
+
+<Note>
+  Provide request context via HTTP headers only (validated against your Context Config). Do not include it in the JSON body. See [Request context](/typescript-sdk/request-context).
+</Note>
 
 ### Example cURL
 
