--- a/agents-docs/content/docs/concepts.mdx
+++ b/agents-docs/content/docs/concepts.mdx
@@ -62,16 +62,16 @@ API keys are the recommended approach for production use, providing secure, scop
 
 Sometimes, you want your Agent to reply not in plain text, but with specific types of information 'Structured Outputs' (JSON).
 
-With Inkeep, there's a few ways to do this:
+With Inkeep, there are a few ways to do this:
 - **Data Components**: Structured Outputs that agents can output in their messages so they can render rich, interactive UIs (lists, buttons, forms, etc.) or convey structured information.
-- **Artifacts**: An Agent save information from a **tool call result** as an artifact in order to make it available to others. For example, an Agent that did a web search can save the contents of a webpage it looked at as an artifact. Once saved, an Agent can cite or reference artifacts in its response, and other agents or users can fetch the full artifacts if they'd like.
-- **Status Updates**: Real-time progress updates that can be plain text or Structure Outputs that can be used to keep users informed about what the agent is doing during longer operations. 
+- **Artifacts**: An Agent can save information from a **tool call result** as an artifact in order to make it available to others. For example, an Agent that did a web search can save the contents of a webpage it looked at as an artifact. Once saved, an Agent can cite or reference artifacts in its response, and other agents or users can fetch the full artifacts if they'd like.
+- **Status Updates**: Real-time progress updates that can be plain text or Structured Outputs that can be used to keep users informed about what the agent is doing during longer operations. 
 
 ## Passing context to Agents
 
 Beyond using Tools to fetch information, Agents also receive information via:
 - **Headers**: In the API request to an Agent, the calling application can include headers (a.k.a **Request Context**) for an agent.
-- **Context Fetchers**: Can be configured for a Graph so that at the beginning of a conversation, an API call is automatically made to an external service to get information that is is then made available to any Agent. For example, your Headers may include a `user-id` which can be used to auto-fetch information from a CRM about the user for any Agent to use.
+- **Context Fetchers**: Can be configured for a Graph so that at the beginning of a conversation, an API call is automatically made to an external service to get information that is then made available to any Agent. For example, your Headers may include a `user-id` which can be used to auto-fetch information from a CRM about the user for any Agent to use.
 
 Headers and fetched context can then be referenced explicitly as `{{variables}}` in Agent prompts. Learn more [here](/typescript-sdk/request-context).
 
