--- a/agents-docs/content/docs/quick-start.mdx
+++ b/agents-docs/content/docs/quick-start.mdx
@@ -41,6 +41,10 @@ If you don't have pnpm yet, use Corepack:
 ```bash
 npx @inkeep/create-agents my-agent-directory
 cd my-agent-directory
+```
+
+If used corepack for installing pnpm:
+```
 corepack use pnpm@latest-10  # pins pnpm version in package.json
 ```
 
