--- a/agents-docs/content/docs/quick-start.mdx
+++ b/agents-docs/content/docs/quick-start.mdx
@@ -37,7 +37,7 @@ If you don't have pnpm yet, use Corepack:
 </Tabs>
 
 <Tip>
-  **Prerequisites:** Make sure you have Node.js 18.12+ installed (LTS recommended) for PNPM 10 compatibility.
+  **Prerequisites:** Make sure you have Node.js 22+ installed (Latest LTS) for compatibility with PNPM 10 and our agent framework.
 </Tip>
 
 ### Step 1: Create a new agents project
