credentials quickstart added

--- a/agents-docs/content/docs/quick-start/getting-started.mdx
+++ b/agents-docs/content/docs/quick-start/getting-started.mdx
@@ -1,5 +1,5 @@
 ---
-title: Quick Start
+title: Getting Started
 description: Get started with Inkeep's multi-agent framework locally
 icon: "LuRocket"
 ---
@@ -45,7 +45,6 @@ If you don't have pnpm yet, use Corepack:
 ```bash
 npx @inkeep/create-agents my-agent-directory
 cd my-agent-directory
-corepack use pnpm@latest-10  # pins pnpm version in package.json
 ```
 
 If used corepack for installing pnpm:
