removed referenced to tenant id

--- a/agents-docs/content/docs/talk-to-your-agents/react/custom-trigger.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/custom-trigger.mdx
@@ -10,11 +10,19 @@ Custom triggers give you complete control over how users open Inkeep modals in y
 
 ## Installation
 
-<Tabs>
-  <Tab title="npm">```bash npm install @inkeep/cxkit-react-oss ```</Tab>
-  <Tab title="yarn">```bash yarn add @inkeep/cxkit-react-oss ```</Tab>
-  <Tab title="pnpm">```bash pnpm add @inkeep/cxkit-react-oss ```</Tab>
-</Tabs>
+<CodeGroup>
+```bash title="npm"
+npm install @inkeep/cxkit-react-oss
+```
+
+```bash title="yarn"
+yarn add @inkeep/cxkit-react-oss
+```
+
+```bash title="pnpm"
+pnpm add @inkeep/cxkit-react-oss
+```
+</CodeGroup>
 
 ## Quick Start
 
