--- a/agents-docs/content/docs/talk-to-your-agents/react/side-bar-chat.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/side-bar-chat.mdx
@@ -9,11 +9,19 @@ The InkeepSidebarChat component provides a slide-out panel interface for convers
 
 ## Installation
 
-<Tabs>
-  <Tab title="npm">```bash npm install @inkeep/cxkit-react-oss ```</Tab>
-  <Tab title="yarn">```bash yarn add @inkeep/cxkit-react-oss ```</Tab>
-  <Tab title="pnpm">```bash pnpm add @inkeep/cxkit-react-oss ```</Tab>
-</Tabs>
+<CodeGroup>
+```bash title="npm"
+npm install @inkeep/cxkit-react-oss
+```
+
+```bash title="yarn"
+yarn add @inkeep/cxkit-react-oss
+```
+
+```bash title="pnpm"
+pnpm add @inkeep/cxkit-react-oss
+```
+</CodeGroup>
 
 ## Quick Start
 
