--- a/agents-docs/content/docs/talk-to-your-agents/react/chat-button.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/chat-button.mdx
@@ -8,11 +8,19 @@ The chat button component is a simple way to trigger the Inkeep modal.
 
 ## Installation
 
-<Tabs>
-  <Tab title="npm">```bash npm install @inkeep/cxkit-react-oss ```</Tab>
-  <Tab title="yarn">```bash yarn add @inkeep/cxkit-react-oss ```</Tab>
-  <Tab title="pnpm">```bash pnpm add @inkeep/cxkit-react-oss ```</Tab>
-</Tabs>
+<CodeGroup>
+```bash title="npm"
+npm install @inkeep/cxkit-react-oss
+```
+
+```bash title="yarn"
+yarn add @inkeep/cxkit-react-oss
+```
+
+```bash title="pnpm"
+pnpm add @inkeep/cxkit-react-oss
+```
+</CodeGroup>
 
 ## Quick Start
 
