--- a/agents-docs/content/docs/talk-to-your-agents/react/embedded-chat.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/embedded-chat.mdx
@@ -8,11 +8,19 @@ The InkeepEmbeddedChat component provides a fully embedded chat interface that y
 
 ## Installation
 
-<Tabs>
-  <Tab title="npm">```bash npm install @inkeep/cxkit-react-oss ```</Tab>
-  <Tab title="yarn">```bash yarn add @inkeep/cxkit-react-oss ```</Tab>
-  <Tab title="pnpm">```bash pnpm add @inkeep/cxkit-react-oss ```</Tab>
-</Tabs>
+<CodeGroup>
+```bash title="npm"
+npm install @inkeep/cxkit-react-oss
+```
+
+```bash title="yarn"
+yarn add @inkeep/cxkit-react-oss
+```
+
+```bash title="pnpm"
+pnpm add @inkeep/cxkit-react-oss
+```
+</CodeGroup>
 
 ## Quick Start
 
